@@ -31,6 +31,11 @@ Bug Fixes
   root. Including the one that wasn't present in 2.1.
   (Vincent Ladeuil, #646133)
 
+* The ``branch.tags.merge_to(target_branch)`` API used by plugins such as
+  ``bzr-builddeb`` now propagates changes to the master branch of the
+  target branch (if there is one).  This makes it consistent with the
+  other tag APIs.  (Andrew Bennetts, #603395)
+
 * Using bzr with `lp:` urls behind an http proxy should work.
   (Robert Collins, #558343)
 
